--- a/src/webProjects/WebAPI/appsettings.json
+++ b/src/webProjects/WebAPI/appsettings.json
@@ -1,8 +1,12 @@
 {
-
   "ConnectionStrings": {
     "TobetoNet3ANArchDb": "Server=(localdb)\\mssqllocaldb;Database=TobetoNet3ANArchDb;Trusted_Connection=true"
   },
+  "SeriLogConfigurations": {
+    "MongoDbConfiguration": {
+      "Collection": "logs",
+      "ConnectionString": "mongodb://localhost:27017/loggerdb"
+    },
     "Logging": {
       "LogLevel": {
         "Default": "Information",
@@ -10,4 +14,5 @@
       }
     },
     "AllowedHosts": "*"
+  }
 }
