--- a/src/webProjects/WebAPI/appsettings.json
+++ b/src/webProjects/WebAPI/appsettings.json
@@ -13,6 +13,9 @@
         "Microsoft.AspNetCore": "Warning"
       }
     },
-    "AllowedHosts": "*"
+    "AllowedHosts": "*",
+    "CacheSettings": {
+      "SlidingExpiration": 2
+    }
   }
 }
