--- a/src/webProjects/WebAPI/WebAPI.csproj
+++ b/src/webProjects/WebAPI/WebAPI.csproj
@@ -20,4 +20,8 @@
     <ProjectReference Include="..\Persistance\Persistence.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\" />
+  </ItemGroup>
+
 </Project>
