--- a/src/webProjects/WebAPI/WebAPI.csproj
+++ b/src/webProjects/WebAPI/WebAPI.csproj
@@ -17,6 +17,8 @@
 	</ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\..\Core.CrossCuttingConcerns\Core.CrossCuttingConcerns.csproj" />
+    <ProjectReference Include="..\Application\Application.csproj" />
     <ProjectReference Include="..\Persistance\Persistence.csproj" />
   </ItemGroup>
 
