--- a/src/webProjects/Application/Application.csproj
+++ b/src/webProjects/Application/Application.csproj
@@ -7,14 +7,26 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Features\Auth\Commands\**" />
+    <Compile Remove="Features\Auth\Profiles\**" />
+    <EmbeddedResource Remove="Features\Auth\Commands\**" />
+    <EmbeddedResource Remove="Features\Auth\Profiles\**" />
+    <None Remove="Features\Auth\Commands\**" />
+    <None Remove="Features\Auth\Profiles\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="AutoMapper" Version="13.0.1" />
     <PackageReference Include="FluentValidation" Version="11.9.0" />
     <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="11.9.0" />
     <PackageReference Include="MediatR" Version="12.2.0" />
     <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="11.0.0" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.2" />
-    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="8.0.0" />
   </ItemGroup>
+	
+	<ItemGroup>
+		<Folder Include="Features\Brands\Rules\" />
+		<Folder Include="Features\Models\Constants\" />
+	</ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\..\corePackages\Core.Application\Core.Application.csproj" />
